# pipewire-rs

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  code_of_conduct.md  deny.toml
ci/: install-rust.sh
libspa/: Cargo.toml  README.md  build.rs
libspa-sys/: Cargo.toml  README.md  build.rs  wrapper.h
libspa-sys/src/: lib.rs
libspa/src/: dict.rs  direction.rs  error.rs  flags.rs  hook.rs  interface.rs  lib.rs  list.rs  pod.rs  result.rs  utils.rs
libspa/src/pod/: deserialize.rs  serialize.rs
libspa/tests/: pod.c  pod.rs
pipewire/: Cargo.toml  README.md
pipewire-sys/: Cargo.toml  README.md  build.rs
pipewire-sys/src/: lib.rs
pipewire/examples/: create-delete-remote-objects.rs  pw-mon.rs  roundtrip.rs  streams.rs
pipewire/src/: buffer.rs  channel.rs  constants.rs  context.rs  core_.rs  data.rs  error.rs  keys.rs  lib.rs  link.rs  loop_.rs  main_loop.rs  metadata.rs  node.rs  port.rs  properties.rs  proxy.rs  registry.rs  stream.rs  utils.rs
pipewire/src/auto/: keys.rs
tools/: Cargo.toml
