[package]
name = "libspa"
version = "0.2.2"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
edition = "2018"
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for libspa"
repository = "https://gitlab.freedesktop.org/pipewire/pipewire-rs"
license = "MIT"
readme = "README.md"
homepage = "https://pipewire.org"
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/libspa/"
keywords = ["pipewire", "multimedia", "audio", "video"]

[dependencies]
spa_sys = { package = "libspa-sys", version = "0", path = "../libspa-sys" }
bitflags = "1.2"
libc = "0.2"
errno = "0.2"
cookie-factory = "0.3.2"
nom = "6.1.2"

[dev-dependencies]
pipewire-sys = { version = "0", path = "../pipewire-sys" }
pipewire = { version = "0", path = "../pipewire" }

[build-dependencies]
system-deps = "2.0"
cc = "1.0.66"

[package.metadata.system-deps]
libspa = { name = "libspa-0.2", version = "0.2" }
